# sysyc_tester

./: .gitignore  Cargo.toml  config.json  test.sh
runtime/: sylib.h
src/: clean.rs  compile.rs  config.rs  main.rs  run.rs  test.rs  upload.rs  utils.rs
