[package]
name = "sysyc_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
clap = { version="4.5.4", features=["derive"]}
env_logger = "0.11.3"
futures-util = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.21"
mysql = "25.0.0"
serde = "1.0.200"
serde_json = "1.0.116"
